@@ -3,6 +3,7 @@
  */
 package com.ss.jb.dayfour.pc;
 
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -23,7 +24,7 @@ public class BoundedBufferDemo
 		BoundedBuffer b = new BoundedBuffer(10);
 		
 		//Creates some threads for the producer and consumer and start them up
-		Thread producer = new Thread(new Producer(b, IntStream.rangeClosed(0, 9).boxed().toList()));
+		Thread producer = new Thread(new Producer(b, IntStream.rangeClosed(0, 9).boxed().collect(Collectors.toList())));
 		Thread consumer = new Thread(new Consumer(b));
 		
 		producer.start();
